--- a/packages.config
+++ b/packages.config
@@ -4,6 +4,7 @@
   <package id="EntityFramework" version="6.4.4" targetFramework="net462" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net48" />
   <package id="ExcelDataReader.DataSet" version="3.6.0" targetFramework="net48" />
+  <package id="log4net" version="2.0.15" targetFramework="net48" />
   <package id="MahApps.Metro" version="2.4.9" targetFramework="net462" requireReinstallation="true" />
   <package id="MahApps.Metro.IconPacks" version="4.11.0" targetFramework="net48" />
   <package id="MaterialDesignColors" version="2.1.2" targetFramework="net48" />
