--- a/e9361debug.csproj
+++ b/e9361debug.csproj
@@ -239,6 +239,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="communication\CommunicatePort.cs" />
+    <Compile Include="json\JsonProcess.cs" />
     <Compile Include="SRMessage\SRMessage.cs" />
     <Compile Include="maintain\MaintainProtocol.cs" />
     <Compile Include="sqlite\SqliteHelper.cs" />
