--- a/packages.config
+++ b/packages.config
@@ -8,6 +8,12 @@
   <package id="log4net" version="2.0.15" targetFramework="net48" />
   <package id="MaterialDesignColors" version="2.1.2" targetFramework="net48" />
   <package id="MaterialDesignThemes" version="4.8.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="3.3.4" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="4.5.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="4.5.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="4.5.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="4.5.0" targetFramework="net48" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net48" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net48" />
   <package id="Moq" version="4.18.4" targetFramework="net48" />
   <package id="MQTTnet" version="4.1.4.563" targetFramework="net462" />
@@ -17,13 +23,18 @@
   <package id="SSH.NET" version="2020.0.2" targetFramework="net462" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.117.0" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.CodeDom" version="7.0.0" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="6.0.0" targetFramework="net48" />
   <package id="System.Data.SQLite" version="1.0.117.0" targetFramework="net462" />
   <package id="System.Data.SQLite.Core" version="1.0.117.0" targetFramework="net462" />
   <package id="System.Data.SQLite.EF6" version="1.0.117.0" targetFramework="net462" />
   <package id="System.Data.SQLite.Linq" version="1.0.117.0" targetFramework="net462" />
+  <package id="System.Management" version="7.0.1" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Reflection.Metadata" version="6.0.1" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Text.Encoding.CodePages" version="6.0.0" targetFramework="net48" />
   <package id="System.Threading.Channels" version="7.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
 </packages>
