--- a/e9361debug.csproj
+++ b/e9361debug.csproj
@@ -174,6 +174,7 @@
       <DependentUpon>CheckTree.xaml</DependentUpon>
     </Compile>
     <Compile Include="json\JsonProcess.cs" />
+    <Compile Include="logical\CheckCmdParameters.cs" />
     <Compile Include="logical\CheckItems.cs" />
     <Compile Include="messgebox\msg.cs" />
     <Compile Include="mqtt\MqttHelper.cs" />
