ssh和sftp类命令, 未完成

--- a/packages.config
+++ b/packages.config
@@ -20,6 +20,7 @@
   <package id="MultiSelectTreeView" version="1.0.9" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net462" />
   <package id="RabbitMQ.Client" version="6.4.0" targetFramework="net48" />
+  <package id="Renci.SshNet.Async" version="1.4.0" targetFramework="net48" />
   <package id="SSH.NET" version="2020.0.2" targetFramework="net462" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.117.0" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
