1. 添加设置终端645地址功能 2. pt100的温度值范围设置位-3.0~3.0℃

--- a/e9361debug.csproj
+++ b/e9361debug.csproj
@@ -195,6 +195,9 @@
     <Compile Include="Windows\ADE9078Set.xaml.cs">
       <DependentUpon>ADE9078Set.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Windows\TerminalAddressSet.xaml.cs">
+      <DependentUpon>TerminalAddressSet.xaml</DependentUpon>
+    </Compile>
     <Page Include="Controls\ADESetOneRoute.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -220,6 +223,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Windows\ADE9078Set.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Windows\TerminalAddressSet.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
