检测完成后的工作, 现在不启用, 留作以后要用的时候再说

--- a/e9361debug.csproj
+++ b/e9361debug.csproj
@@ -257,6 +257,9 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="upload\rc.local">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
