--- a/e9361debug.csproj
+++ b/e9361debug.csproj
@@ -173,6 +173,7 @@
     <Compile Include="common\common.cs" />
     <Compile Include="communication\CommunicateNet.cs" />
     <Compile Include="communication\CommunicatePort.cs" />
+    <Compile Include="config\Configuration.cs" />
     <Compile Include="Controls\ADESetOneRoute.xaml.cs">
       <DependentUpon>ADESetOneRoute.xaml</DependentUpon>
     </Compile>
@@ -200,6 +201,9 @@
     </Compile>
     <Compile Include="Windows\ConfigCheckItems.xaml.cs">
       <DependentUpon>ConfigCheckItems.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Windows\Dlt645AddressSet.xaml.cs">
+      <DependentUpon>Dlt645AddressSet.xaml</DependentUpon>
     </Compile>
     <Compile Include="Windows\TerminalAddressSet.xaml.cs">
       <DependentUpon>TerminalAddressSet.xaml</DependentUpon>
@@ -240,6 +244,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Windows\Dlt645AddressSet.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\TerminalAddressSet.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -263,6 +271,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="config\config.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="log4net.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
