--- a/log4net.config
+++ b/log4net.config
@@ -33,7 +33,7 @@
 			<!--是否使用静态文件名-->
 			<param name="DatePattern" value="yyyyMMdd&quot;.htm&quot;" />
 			<!--日志文件名-->
-			<param name="RollingStyle" value="Date" />
+			<param name="RollingStyle" value="Composite" />
 			<!--文件创建的方式，这里是以Date方式创建-->
 			<!--错误日志布局-->
 			<layout type="log4net.Layout.PatternLayout">
@@ -48,7 +48,7 @@
 			<param name="MaxSizeRollBackups" value="100" />
 			<param name="StaticLogFileName" value="false" />
 			<param name="DatePattern" value="yyyyMMdd&quot;.htm&quot;" />
-			<param name="RollingStyle" value="Date" />
+			<param name="RollingStyle" value="Composite" />
 			<!--信息日志布局-->
 			<layout type="log4net.Layout.PatternLayout">
 				<param name="ConversionPattern" value="&lt;HR COLOR=blue&gt;%n日志时间：%d [%t];%n%m &lt;BR&gt;%n &lt;HR Size=1&gt;" />
